[gd_scene load_steps=6 format=3 uid="uid://c8n2m4k5p7q1r"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="2"]
[ext_resource type="Script" path="res://scripts/Player2.gd" id="3"]
[ext_resource type="Shader" path="res://scripts/WaveShader.gdshader" id="4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1"]
size = Vector2(40, 20)

[node name="Main" type="Node2D"]
script = ExtResource("1")

[node name="WaveShader" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.05, 0.2, 0.3)
material = ShaderMaterial.new()

[node name="Player1" type="CharacterBody2D" parent="."]
position = Vector2(200, 384)
script = ExtResource("2")

[node name="Sprite2D" type="Sprite2D" parent="Player1"]
modulate = Color(0.3, 0.6, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player1"]
shape = SubResource("RectangleShape2D_1")

[node name="Trail" type="CPUParticles2D" parent="Player1"]
emitting = false
lifetime = 0.5
direction = Vector2(0, 1)
spread = 15.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.3

[node name="Player2" type="CharacterBody2D" parent="."]
position = Vector2(824, 384)
script = ExtResource("3")

[node name="Sprite2D" type="Sprite2D" parent="Player2"]
modulate = Color(0.8, 0.3, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player2"]
shape = SubResource("RectangleShape2D_1")

[node name="Trail" type="CPUParticles2D" parent="Player2"]
emitting = false
lifetime = 0.5
direction = Vector2(0, 1)
spread = 15.0
initial_velocity_min = 20.0
initial_velocity_max = 40.0
gravity = Vector2(0, 0)
scale_amount_min = 0.1
scale_amount_max = 0.3

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="ScoreLabel" type="Label" parent="UILayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = -20.0
text = "Seeds: 0/20"
theme_override_font_sizes/font_size = 24

[node name="WeatherLabel" type="Label" parent="UILayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 50.0
text = "Weather: Calm"
theme_override_font_sizes/font_size = 20
horizontal_alignment = 1